--- a/styles.css
+++ b/styles.css
@@ -211,7 +211,7 @@ nav a:hover{
 
 /* HERO SECTION */
 .hero{
-    background: url('hero.jpg') center center/cover no-repeat;
+    background: url('./hero.jpg') center center/cover no-repeat;
     position: relative;
     min-height: 85vh;
     display: flex;
